# manim_smart_algebra

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  to_do_list.txt
manim_smart_algebra/: __init__.py  actions.py  expressions.py  utils.py
src/MF_Algebra/: __init__.py  utils.py
src/MF_Algebra/actions/: __init__.py  action_common.py  action_core.py  action_variants.py  combinations.py  common.py
src/MF_Algebra/expressions/: __init__.py  common.py  expression_core.py  functions.py  numbers.py  operations.py  relations.py  sequences.py  variables.py
src/MF_Algebra/extra/calculus/: __init__.py  calculus_common.py  calculus_core.py  common.py
src/MF_Algebra/extra/trigonometry/: __init__.py  common.py  trigonometry_core.py
src/MF_Algebra/timelines/: __init__.py  timeline_common.py  timeline_core.py  variants.py
src/manim_smart_algebra/: __init__.py  actions.py  actions_old.py  calculus.py  expressions.py  nicknames.py  utils.py  vstack.py
src/manim_smart_algebra/actions/: __init__.py  action_core.py  animations.py  combinations.py  common.py  transforms.py  variants.py
src/manim_smart_algebra/calculus/: __init__.py  calculus_core.py  common.py  series.py
src/manim_smart_algebra/expressions/: __init__.py  common.py  expression_core.py  functions.py  numbers.py  operations.py  relations.py  sequences.py  variables.py
src/manim_smart_algebra/extra/calculus/: calculus_core.py
src/manim_smart_algebra/timelines/: __init__.py  common.py  timeline_core.py  variants.py
src/manim_smart_algebra/trigonometry/: common.py  trigonometry_core.py
src/manim_smart_algebra/unifier/: __init__.py  vstack.py  zipper.py
tests/: GLTests.py  RenderTests.py  conftest.py  render_calculus.py  test_actions.py  test_expressions.py  test_timelines.py  test_zipper.py  workspace.py
workspace/: MF_Tools_TBGM_Tests.py  RenderTests.py  debug.py  debug_CE.py  render_calculus.py  reverse.py  workspace.py
