[tool.poetry]
name = "manim-smart-algebra"
version = "0.4.0"
description = "ManimGL plugin which simplifies the process of animating algebra"
authors = ["John Connell <johnconnelltutor@gmail.com>"]
license = "MIT"
repository = "https://github.com/TheMathematicFanatic/manim_smart_algebra"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
manimgl = ">=1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
