[tool.poetry]
name = "MF-Algebra"
version = "0.5.0"
description = "Manim plugin which aims to make it much easier to meaningfully transform algebra expressions."
authors = ["John Connell <johnconnelltutor@gmail.com>"]
license = "None"
repository = "https://github.com/TheMathematicFanatic/MF_Algebra"
readme = "README.md"

packages = [
  { include = "MF_Algebra", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"
MF_Tools = ">=1.3.3"
manim = { version = ">=0.17.0", optional = true }
manimgl = { version = ">=1.7.0", optional = true }

[tool.poetry.extras]
manimce = ["manim"]
manimgl = ["manimgl"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
